[metadata]
name = dreams
description = Distributed Renewable Energy Analysis and Mapping Suite
author = Thad Haines
author_email = jthaine@sandia.gov
version = 1.0.0

[options]
install_requires =
    dss-python
    geopandas
    ipympl
    ipython
    numpy==1.23.3
    matplotlib==3.7.3
    OpenDSSDirect.py[extras]
    openpyxl
    scipy
    seaborn
    Shapely
    simplekml
    XlsxWriter
    contextily
    cmasher
    plotly
    nbformat
    wxpython
    xarray
    mapclassify